use max width and max height instead of wdidth and height, to avoid squishing images

--- a/VizStuff/Visualizations/vizStyles.css
+++ b/VizStuff/Visualizations/vizStyles.css
@@ -1,5 +1,7 @@
 img{
     width: auto;
+    height: auto;
+    max-width: 90%;
     /* vh based on https://stackoverflow.com/a/49180868*/
-    height: 90vh;
+    max-height: 90vh;
 }
